fix(popups): background jumping effect on mobile and tablets

--- a/assets/styles/style.css
+++ b/assets/styles/style.css
@@ -764,6 +764,10 @@ footer {
 /* #region media for tablets */
 
 @media (max-width: 996px) {
+  body.popup-open {
+    margin-right: 0;
+  }
+
   .container {
     max-width: 90%;
   }
